We add a link in the same tab

--- a/daniela_aboutMe.html
+++ b/daniela_aboutMe.html
@@ -4,8 +4,11 @@
     <title>
         Daniela Quitian Barrera
     </title>
-    </head>
-<img src= "daniela.jpg" width= "500" height= "500"/>
-<h3> Hi, I'm Daniela Quitian, I'm 24 years old, I like painting and animals, I'm a lawyer, and I love everything I do  
-</h3>
+</head>
 
+<body>
+    <h1 style="text-align:center">
+        <img src="daniela.jpg" width="500" height="500" />
+        <h3> Hi, I'm Daniela Quitian, I'm 24 years old, I like painting and animals, I'm a lawyer, and I love everything
+            I do
+        </h3>
