in the previous link now sends us to a new tab

--- a/proyectoclase.html
+++ b/proyectoclase.html
@@ -79,7 +79,7 @@
             <video src= "✅✅✅¿Cuál es la diferencia entre branding y marketing_ 100% EXPLICADO CON UNA PELICULA DE DISNEY.mp4" width= "500" height= "300" controls>
                 Some error message when video doesn t load correctly 
                 </video>
-    <a href= "https://www.sic.gov.co/"> link a pagina sic </a>
+    <a href= "https://www.sic.gov.co/"target= "_blanck"> link a pagina sic </a>
         </h3>
     </div>
 </body>
